@@ -17,3 +17,11 @@ Instructions: [PDF](/Instructions.pdf) (Credits- [Advanced Programming](http://t
 -> Java 15.0.1
 
 -> JavaFX 15.0.1
+
+# IDE Set-Up
+
+VM Options:
+
+--module-path %PATH_TO_JAVAFX% --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web
+
+Note: %PATH_TO_JAVAFX% is the path where javafx is present
